Change light Colour

--- a/src/components/random_advice/randomAdvice.css
+++ b/src/components/random_advice/randomAdvice.css
@@ -10,8 +10,8 @@
     width: 8em;
     margin: 1em;
     background-color: #2B3C59;
-    border: 0.2em solid #ffedd8;
-    color: #ffedd8;
+    border: 0.2em solid #f5ebe0;
+    color: #f5ebe0;
     border-radius: 8px;
 }
 
@@ -23,12 +23,12 @@
     text-align: center;
     max-width: 500px;
     padding: 5em;
-    border: solid #ffedd8;
+    border: solid #f5ebe0;
     background-color: #2B3C59;
-    color: #ffedd8;
+    color: #f5ebe0;
     border-radius: 8px;
 }
 
 .adviceH{
-    color: #ffedd8;
+    color: #f5ebe0;
 }
